@@ -1,3 +1,7 @@
+09-03-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Improved error reporting for TCEmain errors
+
 09-01-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added preprocessRawRecordset hook
